compiler/kernc_cli/tests/soundness/reject/trait_defaults/default_method_body_type_mismatch_rejected.kn
// class: trait-default-methods
// source: trait default bodies are type checked
// stderr: mismatched types

trait Bad {
    fn value() i32 {
        return true;
    }
};

struct X {};

impl X: Bad {}

fn main() i32 {
    return X.{}.value();
}
